fix(style): css transition flickering

--- a/renderer/style.css
+++ b/renderer/style.css
@@ -186,7 +186,7 @@ a {
   animation: fadeIn .3s;
 }
 .move-leave {
-  visibility: hidden;
+  display: none;
 }
 @-webkit-keyframes fadeIn {
   from {
